@@ -1,3 +1,3 @@
 - if @tasks[key] && !@tasks[key].empty?
   %h3= value
-  .bucket= render :partial => @view, :collection => @tasks[key], :locals => { :bucket => key }
+  .bucket{:id => key}= render :partial => @view, :collection => @tasks[key], :locals => { :bucket => key }
