@@ -1,5 +1,5 @@
 %li[pending]{ highlightable(dom_id(pending, :tools)) }
-  - if pending.category
+  - unless pending.category.blank?
     .strip{:class => pending.category}= Setting.task_category[pending.category.intern]
   - else
     .strip{:style => "color:white"} Other
