@@ -1,5 +1,9 @@
 It does not matter how slowly you go as long as you do not stop. -- Confucius
 
+Sat, Feb 7, 2008
+---------------------------------------------------------------------
+- Created initial implementation of adding a new task.
+
 Fri, Feb 6, 2008
 ---------------------------------------------------------------------
 - Finished implementing after_filter callback hook in [web-to-lead] plugin.
